--- a/css/style-home.css
+++ b/css/style-home.css
@@ -165,6 +165,13 @@ hr.bet-box{
     opacity: .4;
     margin: .5rem 0;
 }
+section.about div.big-about{
+    margin-top: 1.5rem;
+    
+}
+section.about div.big-about div.about{
+    font-size: 3rem;
+}
 section.about div.main{
     display: flex;
     justify-content: center;
