--- a/css/style-home.css
+++ b/css/style-home.css
@@ -243,15 +243,12 @@ section.services div.header h3{
 section.services div.header h2{
     color:whitesmoke;
 }
+/*------------main service------------------*/
 section.services div.main-services{
-    width: 90%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
+    
 }
 section.services div.main-services div.serv-box{
-    width: 28%;
+    width: 45%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -279,10 +276,11 @@ section.services div.main-services div.serv-box div.img img{
 section.services div.main-services div.serv-box div.title{
     display: flex;
     flex-direction: row;
-    justify-content:start;
+    justify-content:center;
     align-items: center;
     flex-wrap: nowrap;
     width: 100%;
+
 }
 
 section.services div.main-services div.serv-box div.title i.fa-solid.fa-file-shield{
@@ -771,6 +769,48 @@ i.fa-solid.fa-circle-chevron-up{
     margin-left: auto;
     margin-right: auto;
 }
+
+/*--------Swiper style----------*/
+.swiper {
+    width: 85%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  span.swiper-pagination-progressbar-fill{
+    background-color: var(--subcolor)!important;
+  }
+  .swiper-button-next,
+  .swiper-button-prev
+   {
+    color: var(--subcolor)!important;
+}
+/*--------responsive----------*/
+
 @media(max-width:825px){
     nav{ height: 15vh;
         align-items: center;
@@ -820,10 +860,7 @@ i.fa-solid.fa-circle-chevron-up{
         width: 100%;
     }
     section.services div.main-services{
-        margin: 0;
-        padding: 0;
-        width: 90%;
-        flex-direction: column;
+        
     }
     section.services div.main-services div.serv-box{
         min-width:70%;
